-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs25, 7, 8, 8u40
-
Component/s: hotspot
-
b44
-
x86
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8083318 | emb-9 | Roland Westrelin | P3 | Resolved | Fixed | team |
| JDK-8068069 | 8u45 | Roland Westrelin | P3 | Resolved | Fixed | b02 |
| JDK-8064322 | 8u40 | Roland Westrelin | P3 | Resolved | Fixed | b19 |
| JDK-8070931 | emb-8u47 | Roland Westrelin | P3 | Resolved | Fixed | team |
Here is run string:
/net/vmsqe.russia/export/jdk/re/7/promoted/ea/b74/binaries/solaris-i586/fastdebug/bin/java -server -Xmixed -XX:+UnlockExperimentalVMOptions -XX:+UseG1GC -Xmx8M -XX:+DoEscapeAnalysis -cp /export/home/lm153972/NetBeansProjects/Tests/build/classes tests.Main
Here is the result for product:
should not reach here
final
Exception in thread "main" java.lang.NullPointerException
at tests.Main.eatMemory(Main.java:40)
at tests.Main.main(Main.java:71)
Here is the result (for fastdebug):
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/vframeArray.cpp:94
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/BUILD_AREA/jdk7/hotspot/src/share/vm/runtime/vframeArray.cpp:94), pid=2482, tid=2
# Error: assert(!value->obj_is_scalar_replaced(),"object should be reallocated already")
#
# JRE version: 7.0-b74
# Java VM: Java HotSpot(TM) Server VM (17.0-b03-fastdebug mixed mode solaris-x86 )
# An error report file with more information is saved as:
# /export/home/lm153972/NetBeansProjects/testbase/vm/ant-build/hs_err_pid2482.log
#
# If you would like to submit a bug report, please visit:
# http://java.sun.com/webapps/bugreport/crash.jsp
#
Current thread is 2
Dumping core ...
Abort (core dumped)
These tests fails due this issue (they are not excluded from tun):
nsk/monitoring/stress/classload/unload001
nsk/monitoring/stress/classload/unload002
nsk/monitoring/stress/classload/unload003
nsk/monitoring/stress/classload/unload004
nsk/monitoring/stress/classload/unload005
nsk/monitoring/stress/classload/unload006
nsk/monitoring/stress/classload/unload007
nsk/monitoring/stress/classload/unload008
nsk/monitoring/stress/classload/unload009
nsk/monitoring/stress/classload/unload010
nsk/monitoring/stress/classload/unload011
nsk/monitoring/stress/classload/unload012
Also these:-
gc/gctests/LargeObjects/large001/large001
gc/gctests/LargeObjects/large003
gc/gctests/LargeObjects/large004
gc/gctests/LargeObjects/large005
Also fails
gc/gctests/Steal/steal001
- backported by
-
JDK-8064322 The escape analysis with G1 cause crash assertion src/share/vm/runtime/vframeArray.cpp:94
-
- Resolved
-
-
JDK-8068069 The escape analysis with G1 cause crash assertion src/share/vm/runtime/vframeArray.cpp:94
-
- Resolved
-
-
JDK-8070931 The escape analysis with G1 cause crash assertion src/share/vm/runtime/vframeArray.cpp:94
-
- Resolved
-
-
JDK-8083318 The escape analysis with G1 cause crash assertion src/share/vm/runtime/vframeArray.cpp:94
-
- Resolved
-
- duplicates
-
JDK-8020533 JVM crashed with assert(!value->obj_is_scalar_replaced()) failed: object should be reallocated already
-
- Closed
-
- relates to
-
JDK-8067144 SIGSEGV with +TraceDeoptimization in Deoptimization::print_objects
-
- Resolved
-
-
JDK-8066400 Reserve memory for OOME exception processing during deoptimization
-
- Open
-
-
JDK-8146416 java.lang.OutOfMemoryError triggers: assert(current_bci == 0) failed: bci isn't zero for do_not_unlock_if_synchronized
-
- Resolved
-
-
JDK-8324174 assert(m->is_entered(current)) failed: invariant
-
- Resolved
-
-
JDK-8270010 Handling of failed reallocation of scalar-replaced objects skips some exception handlers
-
- Closed
-